introducing price field; renaming PortfolioCache to AssetCache